# Camera-Aware-Neural-Networks-for-Few-View-Depth-Estimation

./: .gitignore  CMakeLists.txt  README.md
configs/: data_config.yaml  train_config.yaml  train_config_m4pro.yaml  train_config_production.yaml
data/manifest/: sunrgbd_manifest.json
documents/: algorithms_and_theory.md  sprint_plan.md  tensorboard_complete_guide.md
logs/baseline_unet/: metrics.csv
logs/baseline_unet_m4pro/: metrics.csv
runs/baseline_unet_m4pro/: events.out.tfevents.1766492499.Reiyos-MacBook-Pro.local.71017.0
runs/baseline_unet_m4pro/1766492499.256311/: events.out.tfevents.1766492499.Reiyos-MacBook-Pro.local.71017.1
scripts/: README.md  compare_models.sh  download_sunrgbd.sh  evaluate.sh  fix_protobuf.sh  launch_tensorboard.py  monitor_training.py  quick_train_m4pro.sh  quick_train_production.sh  setup_environment.sh  start_tensorboard.sh  tensorboard_writer.py  train.sh  train_with_monitoring.sh  validate_sunrgbd.cpp  watch_training.sh
src/data/: sunrgbd_loader.cpp  sunrgbd_loader.h
src/evaluation/: depth_metrics.h  evaluate_main.cpp  evaluator.h  experiment_comparison.h  statistical_tests.h
src/layers/: film_layer.h  pcl_layer.h  spatial_attention.h
src/loss/: depth_loss.h
src/models/: baseline_unet.h  geometry_aware_network.h  intrinsics_unet.h
src/preprocessing/: preprocess_rays_main.cpp  ray_direction_computer.cpp  ray_direction_computer.h
src/training/: production_trainer.h  tensorboard_logger.h  tensorboard_logger_v2.h  tensorboard_trainer.h  tensorboard_trainer_enhanced.h  train_main.cpp  trainer.h
src/visualization/: depth_visualizer.h  depth_viz.h
tests/: test_dataloader.cpp  test_models.cpp
